[StringBuilder] Replaced most uses of StringBuffer with StringBuilder thanks to Jan's suggestion.